# shared-tools

./: Makefile  README.md  pyproject.toml
scripts/: check-tools-version.sh
src/org_ops_tools/: __init__.py
src/org_ops_tools/ado_pipelines/: __main__.py  pipelines.py
src/org_ops_tools/ado_repos/: __main__.py  repos.py
src/org_ops_tools/shared/: __init__.py  __main__.py  azure_auth.py  config.py  output.py
src/org_ops_tools/sqlmi/: __main__.py  query.py
tests/: conftest.py  test_ado_pipelines.py  test_ado_repos.py  test_azure_auth.py  test_config.py  test_output.py  test_sqlmi.py  test_version_check.py
